Extract version seams so shared code stops touching APIs that drift below 1.21.6
New per-bucket seams (1.21.11/1.21.9/1.21.6/26.1, identical bodies on the
classic buckets): EntityFlushCompat absorbs the snapshot-window entity and
saved-data drain internals, and the four accessor mixins move from the shared
sharedworld.mixins.json into each bucket's versioned registration (their
member types differ per version, so a single compiled accessor cannot span
buckets). ClickEventCompat, NbtCompat, WorldOpenCompat, HelloPacketCompat,
ClientCompat.joinServer, ConnectCompat, GuiCompat (ARGB packing, deferred
tooltips, loading dots, clearFocus), WidgetCompat, TabBarCompat, VersionedTab,
LayoutCompat, and VersionedSelectionList cover the remaining drift points;
VersionedScreen gains scroll, menu-background, and panorama-backdrop hooks.
Shared screens/coordinators now compile against the seams only. Connector's
ConnectStarter carries target+name instead of parsed vanilla types (test
updated to the new contract); test tree drops its seven Java-21-only
getFirst/getLast calls ahead of the Java-17 1.20.1 bucket.

All four buckets: test suites green, mixin audit resolves every claimed
version.